--- a/src/pages/sign-up/sign-up.html
+++ b/src/pages/sign-up/sign-up.html
@@ -17,5 +17,12 @@
 
 
 <ion-content padding>
-
+	<ion-item>
+		<ion-label floating>Correo electrónico</ion-label>
+		<ion-input type="email" ></ion-input>
+	</ion-item>	
+	<ion-item>
+		<ion-label floating>Contraseña</ion-label>
+		<ion-input type="password" ></ion-input>
+	</ion-item>				
 </ion-content>
