formulario ,boton , css

--- a/src/pages/sign-up/sign-up.html
+++ b/src/pages/sign-up/sign-up.html
@@ -24,5 +24,9 @@
 	<ion-item>
 		<ion-label floating>Contraseña</ion-label>
 		<ion-input type="password" ></ion-input>
-	</ion-item>				
+	</ion-item>	
+
+	<div class="form-item">
+		<button ion-button>Crear mi cuenta</button>
+	</div>			
 </ion-content>
